# etools_v2

./: .gitignore  README.md  notes.txt  pyproject.toml
backend/: app.py  temp.py
backend/libs/: config.py  navlib.py  webfs.py
backend/libs/dcpomatic/: __init__.py  filesystem.py  kdmsession.py  process.py
backend/static/: index.html
backend/static/assets/: index-CbM9_5Y6.js  index-Cni8CtBC.css
frontend/: package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1711654450540-edde8be3cdce1.mjs
frontend/design/: LoadingIcon.pxz  closeBtn.pxz
frontend/src/: App.svelte  app.css  template.svelte
frontend/src/libs/: coms.ts
frontend/src/pages/another/: Another.svelte
frontend/src/pages/home/: Home.svelte  HomeCard.svelte
frontend/src/pages/kdm/: KDM.svelte  Selected.svelte  tableHeaders.ts  testdata.ts
frontend/src/pages/schedule/: Schedule.svelte
frontend/svelteflask-frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/svelteflask-frontend/design/: Hero_BG.pxz
frontend/svelteflask-frontend/src/: App.svelte  TestData.ts  app.css
src/svelteflask/: app.py  config.json  temp.py
src/svelteflask/libs/: __init__.py  config.py  dcpomatic.py  filesystem.py  navlib.py
src/svelteflask/libs/dcpomatic/: __init__.py  config.py  filesystem.py  kdmsession.py  process.py
src/svelteflask/static/: index.html
src/svelteflask/static/assets/: index-Ba4b3-nT.css  index-ByShTztl.js  index-BylRwX-7.js  index-C90RKgvu.js  index-CBrL9iIf.css  index-CMp1Kov3.js  index-CTrTDNQm.js  index-D-mJm_F3.js  index-D1sIZZWI.css  (+10 more)
(+40 files in other folders)
