[tool.poetry]
name = "svelteflask"
version = "0.1.0"
description = "POC fullstack app with svelte frontend and flask backend"
authors = ["Eman <pixelomen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
gevent = "^24.2.1"
gevent-websocket = "^0.10.1"
rosettapath = {git = "https://github.com/PixelOmen/rosettapath.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
